fix:list overflow

--- a/nu-kenzie/src/App.css
+++ b/nu-kenzie/src/App.css
@@ -2,8 +2,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  /* background-color: var(--color-grey-4); */
+
   font-family: "Nunito", sans-serif;
 }
 .app-2 {
