--- a/nu-kenzie/src/components/Profile/profile.css
+++ b/nu-kenzie/src/components/Profile/profile.css
@@ -206,8 +206,13 @@ section {
   color: white;
   background-color: var(--color-primary);
 }
-
+ul {
+  max-height: 450px;
+  overflow: auto;
+}
 li {
+  width: 100%;
+
   display: flex;
   flex-direction: column;
 
